--- a/welcome/style.css
+++ b/welcome/style.css
@@ -61,6 +61,8 @@
 
 .welcome-right__title {
     text-align: center;
+    margin-bottom: 25px;
+    color: rgb(70, 6, 36);
 }
 
 .form-login__input-item-login {
@@ -68,5 +70,39 @@
     flex-direction: column;
     width: 20rem;
     margin: auto;
+    margin-bottom: 20px;
+}
+
+.form-login__input-item-login input {
+    border-radius: 5px;
+    outline: none;
+    border:none;
+    padding: 5px 15px;
+}
+
+.form-login__input-item-login label {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+#button-login {
+    cursor: pointer;
+    background-color: var(--blue);
+    color: #fff;
+    margin-top: 10px;
+    transition:background-color .3s ease ;
+}
+
+#button-login:hover {
+    background-color: #013a61;
+}
+
+.form-login__forgot-passw {
+    text-align: center;
+    width: 100%;
+    margin-top: 15px;
+    font-weight: 500;
+    color: #fff;
+    font-size: 14px;
 }
 
