--- a/welcome/style.css
+++ b/welcome/style.css
@@ -21,34 +21,50 @@
 
 .welcome-left__title {
     text-align: center;
-    color: var(--blue);
+    color: #fff;
     font-size: 32px;
 }
 
 .welcome-container__welcome-left {
     grid-column: 1 / 3;
     padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to bottom, #00548cad, #00548cad), url('https://images.pexels.com/photos/164501/pexels-photo-164501.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
 }
 
 .welcome-left__description {
     font-size: 14px;
-    color: var(--blue);
+    color: #fff9;
     width: 85%;
     margin: 0px auto;
-    margin-top: 30px;
+    margin-top: 10px;
+    text-align: center;
 }
 
 .welcome-left__app-platforms {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 20px;
+}
+
+.app-platforms__platforms {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .app-platforms__title {
     font-size: 12px;
+    color: #013a61;
 }
 
 .platforms__link-image img {
-    width: 6rem;
+    width: 7rem;
+}
+.platforms__link-image img[alt="play store logo"] {
+    width: 8.7rem;
 }
 
 .welcome-container__welcome-right {
